--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Kyra Grodmamn # your name (or website title) here
+title: Kyra Grodman # your name (or website title) here
 logo: "/images/propic.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
 
