--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   <a href="https://www.linkedin.com/in/kyragrodman/">LinkedIn</a> 
   <br>
-  <a href="/pdf/Fall 2022 Kyra Grodman Resume.pdf" class="btn btn--info">Resume</a>  
+  <a href="/pdf/Kyra Grodman 2023 Resume.pdf" class="btn btn--info">Resume</a>  
   <br>
   <a href="https://github.com/kag223">GitHub</a>  
   <br>
